--- a/README
+++ b/README
@@ -37,7 +37,7 @@ Each unit [u] within the container [c] needs the class-name:
 ___________________________________________
 
 
-To tweak the layout we can combine units
+To tweak the layout we can combine units like this.
 
 +-------------------[c]-------------------+
 ¦ +-------+ +-------+ +-----------------+ ¦
@@ -97,10 +97,11 @@ The one negative with inline-bock is the additional white-space that gets added 
 
 Some nicer details with Ingrid is that we don't need to add class-names like .first / .last / grid-6 / size1of5 etc. on each unit.
 
-
 You could also skip the whole in-fourths / in-fifths class-names that Ingrid provides and make your own semantic class names for width hooks instead. 
 
-The container doesn't neither have to be called ".in-grid", change all these class-names to anything semantic or unsemantic you like!
+The container doesn't have to be called ".in-grid", change all these class-names to anything semantic or unsemantic you like!
+
+Don't forget that you can use negative margins and position relative positioning to changes the order of individual units. It's pretty easy to do with Ingrid.
 
 ___________________________________________
 
